--- a/index.html
+++ b/index.html
@@ -2,17 +2,17 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>AnikET DaDa</title>
+    <title>Asmita</title>
     <link rel="stylesheet" href="stylesheet.css">
   </head>
   <body>
     <div class="header">
-      <div class="header-logo">Progate</div>
+      <div class="header-logo">Asmit</div>
       <div class="header-list">
         <ul>
-          <li>About</li>
-          <li>Lessons</li>
-          <li>Contact us</li>
+          <li>teacher</li>
+          <li>housewife</li>
+          <li>Dectective</li>
         </ul>
       </div>
     </div>
