--- a/index.html
+++ b/index.html
@@ -2,24 +2,25 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Asmita</title>
+    <title>Ak tech</title>
     <link rel="stylesheet" href="stylesheet.css">
   </head>
   <body>
     <div class="header">
-      <div class="header-logo">Asmit</div>
+      <div class="header-logo">Ak Tech</div>
       <div class="header-list">
         <ul>
-          <li>teacher</li>
-          <li>housewife</li>
-          <li>Dectective</li>
+          <li>Home</li>
+          <li>Log in</li>
+          <li>Sign up</li>
+          <li>Dashboard<li>
         </ul>
       </div>
     </div>
 
     <div class="main">
       <div class="copy-container">
-        <h1>HELLO WORLD<span>.</span></h1>
+        <h1>HELLO WORLD THIS IS MY FRIST WEB PAGE<span>.</span></h1>
         <h2>Let's learn to code</h2>
       </div>
       
